--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.1.3",
     "http-proxy-middleware": "^2.0.6",
     "materialize-css": "^1.0.0-rc.2",
+    "node": "^19.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
