--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "engines": {
     "node": "16.17.1",
@@ -11,16 +10,32 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "concurrently": "^7.4.0",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
+    "heroku": "^7.65.0",
     "mongoose": "^6.6.5",
     "passport": "^0.5.3",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^10.15.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LucabLuca/emaily.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LucabLuca/emaily/issues"
+  },
+  "homepage": "https://github.com/LucabLuca/emaily#readme",
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
