--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "heroku": "^7.65.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
+    "path-parser": "^6.1.0",
     "sendgrid": "^5.2.3",
     "stripe": "^10.15.0"
   }
